Test for checking 'Add' operation of Calculator

--- a/CalcTestProj/CalcTestProj.csproj
+++ b/CalcTestProj/CalcTestProj.csproj
@@ -14,4 +14,23 @@
     <PackageReference Include="SpecRun.SpecFlow" Version="3.0.344" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\myFirstCalc\myFirstCalc.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Calculator.feature.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Calculator.feature</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <SpecFlowFeatureFiles Update="Calculator.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>Calculator.feature.cs</LastGenOutput>
+    </SpecFlowFeatureFiles>
+  </ItemGroup>
+
 </Project>
